chore: update lab

--- a/Lab2.1/index.html
+++ b/Lab2.1/index.html
@@ -11,6 +11,18 @@
 <body>
     <h1>Hello</h1>
     <h1>Hello World</h1>
+    <!-- danh sách không theo thứ tự -->
+    <ul>
+        <li>Thứ nhất</li>
+        <li>Thứ Hai</li>
+        <li>Thứ Ba</li>
+    </ul>
+    <!-- danh sách theo thứ tự -->
+    <ol>
+        <li>Thứ nhất</li>
+        <li>Thứ Hai</li>
+        <li>Thứ Ba</li>
+    </ol>
 </body>
 
 </html>
