chore: update assignment

--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -38,16 +38,18 @@
 			<a href="#"><span>Dự án</span><i class="fa-sharp fa-solid fa-star"></i></a>
 		</nav>
 	</section>
-	<section id="about" class="bg-grey">
+	<section id="about">
 		<div class="container">
 			<div id="target">
-				<h1 class="section-title">Mục tiêu nghề nghiệp</h1>
-				<p> Là một sinh viên đã hoàn thành chương trình chứng chỉ Doanh Nghiệp của FUNiX. Em mong muốn mình sẽ
-					được làm việc với vị trí <b>Fullstack Developer</b>, có thể vận dụng những kiến thức đã được trau
-					dồi và không ngừng học hỏi để phát triển bản thân, cũng như hoàn thành tốt nhất công việc được giao.
-				</p>
+				<div class="container-target">
+					<h1 class="section-title">Mục tiêu nghề nghiệp</h1>
+					<p> Là một sinh viên đã hoàn thành chương trình chứng chỉ Doanh Nghiệp của FUNiX. Em mong muốn mình sẽ
+						được làm việc với vị trí Fullstack Developer, có thể vận dụng những kiến thức đã được trau
+						dồi và không ngừng học hỏi để phát triển bản thân, cũng như hoàn thành tốt nhất công việc được giao.
+					</p>
+				</div>
 			</div>
-			<div id="personal-info">
+			<div id="personal-info" class="bg-grey">
 				<h1 class="section-title">Thông tin cá nhân</h1>
 				<ul class="mt-40 info">
 					<li><span>Giới tính</span> : Nam</li>
@@ -57,6 +59,21 @@
 					<li><span>Địa chỉ</span> : Số 10, đường 10, Hà Nội</li>
 					<li><span>Website</span> : https://abc.tech</li>
 				</ul>
+				<div class="icons-personal-info">
+					<a href="#">
+						<i class="fa-brands fa-twitter"></i>
+					</a>
+					<a href="#">
+						<i class="fa-brands fa-facebook-f"></i>
+					</a>
+					<a href="#">
+						<i class="fa-brands fa-google-plus-g"></i>
+					</a>
+					
+					<a href="#">
+						<i class="fa-brands fa-linkedin-in"></i>
+					</a>
+				</div>
 			</div>
 		</div>
 	</section>
