--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -8,9 +8,6 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-		integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link
 		href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap"
 		rel="stylesheet">
@@ -28,14 +25,14 @@
 	</div>
 	<section id="nav-bar">
 		<nav class="container">
-			<a href="#"><span>Thông tin</span> <i class="fa-solid fa-user"></i></a>
-			<a href="#"><span>Lý lịch</span> <i class="fa-solid fa-file-invoice"></i></i></a>
+			<a href="#"><span>Thông tin</span><i class="icon-user"></i></a>
+			<a href="#"><span>Lý lịch</span> <i class="icon-doc-text-inv"></i></a>
 			<a href="#">
 				<h2>Nguyễn Văn A</h2>
 				<span>Full Stack Developer</span>
 			</a>
-			<a href="#"><span>Chứng chỉ</span> <i class="fa-sharp fa-solid fa-envelope "></i></a>
-			<a href="#"><span>Dự án</span><i class="fa-sharp fa-solid fa-star"></i></a>
+			<a href="#"><span>Chứng chỉ</span> <i class="icon-mail-alt"></i></a>
+			<a href="#"><span>Dự án</span><i class="icon-star-1"></i></a>
 		</nav>
 	</section>
 	<section id="about">
@@ -43,10 +40,10 @@
 			<div id="target">
 				<div class="container-target">
 					<h1 class="section-title">Mục tiêu nghề nghiệp</h1>
-					<p> Là một sinh viên đã hoàn thành chương trình chứng chỉ Doanh Nghiệp của FUNiX. Em mong muốn mình sẽ
-						được làm việc với vị trí Fullstack Developer, có thể vận dụng những kiến thức đã được trau
-						dồi và không ngừng học hỏi để phát triển bản thân, cũng như hoàn thành tốt nhất công việc được giao.
-					</p>
+					<p> Là một sinh viên đã hoàn thành chương trình chứng chỉ Doanh Nghiệp của FUNiX. Em mong muốn mình
+						sẽ được làm việc với vị trí Fullstack Developer, có thể vận dụng những kiến thức đã được trau
+						dồi và không ngừng học hỏi để phát triển bản thân, cũng như hoàn thành tốt nhất công việc được
+						giao. </p>
 				</div>
 			</div>
 			<div id="personal-info" class="bg-grey">
@@ -61,17 +58,16 @@
 				</ul>
 				<div class="icons-personal-info">
 					<a href="#">
-						<i class="fa-brands fa-twitter"></i>
+						<i class="icon-twitter"></i>
 					</a>
 					<a href="#">
-						<i class="fa-brands fa-facebook-f"></i>
+						<i class="icon-facebook"></i>
 					</a>
 					<a href="#">
-						<i class="fa-brands fa-google-plus-g"></i>
+						<i class="icon-gplus"></i>
 					</a>
-					
 					<a href="#">
-						<i class="fa-brands fa-linkedin-in"></i>
+						<i class="icon-linkedin"></i>
 					</a>
 				</div>
 			</div>
@@ -79,23 +75,90 @@
 	</section>
 	<section id="job-info">
 		<div class="container">
-			<div style="margin-top: 20px">
-				<h1>Kinh nghiệm</h1>
+			<div>
+				<div class="box-job-info">
+					<div class="title-job-info">
+						<h2>Kinh nghiệm</h2>
+						<i class="ic-toolbox"></i>
+					</div>
+					<ul class="list-job-info">
+						<li>
+							<p class="name-company">Full Stack Developer - Công ty Y</p>
+							<p class="time-company">05/2022 - <span class="now">Hiện tại</span></p>
+							<p> -­ Xây dựng, phát triển Website dựa trên thiết kế và yêu cầu đã có. </p>
+							<p> - Phân tích và thiết kế Database, sử dụng các hệ quản trị CSDL (MySQL, SQLServer, NoSQL,
+								…) và viết được các câu truy vấn. </p>
+							<p> - Sử dụng ngôn ngữ server­side (Python, Java, …) để xây dựng các Web Server </p>
+						</li>
+						<li>
+							<p class="name-company">Web Designer - Công ty X</p>
+							<p class="time-company">06/2021 - ­04/2022</span></p>
+							<p> -­ Thiết kế Website dự trên yêu cầu của khách hàng. </p>
+							<p> - Sử dụng các công cụ: Figma, Canva, PTS. </p>
+						</li>
+					</ul>
+				</div>
+				<div class="box-job-info">
+					<div class="title-job-info">
+						<h2>Sở thích</h2>
+						<i class="ic-telescope"></i>
+					</div>
+				</div>
 			</div>
-			<div style="margin-top: 20px">
-				<h1>Học vấn</h1>
+			<div>
+				<div class="box-job-info">
+					<div class="title-job-info">
+						<h2>Học vấn</h2>
+						<i class="ic-pencil"></i>
+					</div>
+					<ul class="list-job-info">
+						<li>
+							<p class="name-company">FUNiX</p>
+							<p class="time-company">06/2021 - 05/2022</p>
+							<p> -­ Tốt nghiệp chứng chỉ doanh nghiệp nhánh Fullstack. </p>
+							<p> - GPA: 9 / 10 </p>
+						</li>
+						<li>
+							<p class="name-company">Cử nhân ­ ĐH FPT</p>
+							<p class="time-company">08/2016 ­ - 07/2019</p>
+							<p> -­ Chuyên ngành: Kỹ thuật phần mềm </p>
+							<p> - GPA: 3.2 / 4 </p>
+						</li>
+					</ul>
+				</div>
+				<div class="box-job-info">
+					<div class="title-job-info">
+						<h2>Ngôn ngữ</h2>
+						<i class="ic-mic"></i>
+					</div>
+				</div>
 			</div>
-			<div style="margin-top: 20px">
-				<h1>Hoạt động</h1>
-			</div>
-			<div style="margin-top: 20px">
-				<h1>Sở thích</h1>
-			</div>
-			<div style="margin-top: 20px">
-				<h1>Ngôn ngữ</h1>
-			</div>
-			<div style="margin-top: 20px">
-				<h1>Kỹ năng</h1>
+			<div>
+				<div class="box-job-info">
+					<div class="title-job-info">
+						<h2>Hoạt động</h2>
+						<i class="ic-toolbox"></i>
+					</div>
+					<ul class="list-job-info">
+						<li>
+							<p class="name-company">FPT Edu Hackathon 2019</p>
+							<p class="time-company">03/2019 - 05/2019 </p>
+							<p> -­ Giải 3 bảng A </p>
+							<p> - Đề tài: Trang web về phân loại rác thải </p>
+						</li>
+						<li>
+							<p class="name-company">Câu lạc bộ Z</p>
+							<p class="time-company">08/2016 - 08/2017</p>
+							<p> -­ Trưởng ban chuyên môn </p>
+						</li>
+					</ul>
+				</div>
+				<div class="box-job-info">
+					<div class="title-job-info">
+						<h2>Kỹ năng</h2>
+						<i class="ic-tools-2"></i>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
