chore: update assignment 2

--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -103,6 +103,32 @@
 						<h2>Sở thích</h2>
 						<i class="ic-telescope"></i>
 					</div>
+					<div class="interests">
+						<div class="item-interests">
+							<div>
+								<i class="ic-megaphone"></i>
+							</div>
+							<span>Âm nhạc</span>
+						</div>
+						<div class="item-interests">
+							<div>
+								<i class="ic-strategy"></i>
+							</div>
+							<span>Chơi game</span>
+						</div>
+						<div class="item-interests">
+							<div>
+								<i class="ic-hotairballoon"></i>
+							</div>
+							<span>Du lịch</span>
+						</div>
+						<div class="item-interests">
+							<div>
+								<i class="ic-basket"></i>
+							</div>
+							<span>Nấu ăn</span>
+						</div>
+					</div>
 				</div>
 			</div>
 			<div>
@@ -131,6 +157,14 @@
 						<h2>Ngôn ngữ</h2>
 						<i class="ic-mic"></i>
 					</div>
+					<p class="titles-name"> Tiếng Anh- IELTS 7.0 </p>
+					<span class="rank-active"></span>
+					<span class="rank-active"></span>
+					<span class="rank-inactive"></span>
+					<p class="titles-name"> Tiếng Nhật - JLPT N4 </p>
+					<span class="rank-active"></span>
+					<span class="rank-inactive"></span>
+					<span class="rank-inactive"></span>
 				</div>
 			</div>
 			<div>
@@ -158,6 +192,22 @@
 						<h2>Kỹ năng</h2>
 						<i class="ic-tools-2"></i>
 					</div>
+					<p class="titles-name">HTML/CSS: Fundamental</p>
+					<span class="rank-active"></span>
+					<span class="rank-inactive"></span>
+					<span class="rank-inactive"></span>
+					<p class="titles-name"> Javascript: Intermediate </p>
+					<span class="rank-active"></span>
+					<span class="rank-active"></span>
+					<span class="rank-inactive"></span>
+					<p class="titles-name"> NodeJS: Intermediate </p>
+					<span class="rank-active"></span>
+					<span class="rank-active"></span>
+					<span class="rank-inactive"></span>
+					<p class="titles-name"> Bootstrap 5: Fundamental </p>
+					<span class="rank-active"></span>
+					<span class="rank-inactive"></span>
+					<span class="rank-inactive"></span>
 				</div>
 			</div>
 		</div>
@@ -165,19 +215,138 @@
 	<section id="certificate" class="bg-grey">
 		<div class="container">
 			<h1 class="section-title"> Chứng chỉ - Giải thưởng </h1>
+			<div class="box-certificate">
+				<div class="certificate-top">
+					<div class="item-certificate">
+						<img src="./images/Cert_WEB.png" alt="web">
+						<div class="content-item-certificate">
+							<h3>Chứng chỉ lập trình Web - Funix</h3>
+							<p>- Chứng chỉ thuộc chương trình CCDN</p>
+							<p>- GPA: 8.6</p>
+						</div>
+					</div>
+					<div class="item-certificate">
+						<img src="./images/Cert_PRF.png" alt="Javascript">
+						<div class="content-item-certificate">
+							<h3>Chứng chỉ lập trình Javascript - Funix</h3>
+							<p>- Chứng chỉ thuộc chương trình CCDN</p>
+							<p>- GPA: 8.9</p>
+						</div>
+					</div>
+				</div>
+				<div class="certificate-bottom">
+					<div class="item-certificate">
+						<img src="./images/Cert_PRF.png" alt="database">
+						<div class="content-item-certificate">
+							<h3>Chứng chỉ thiết kế DATABASE - Funix</h3>
+							<p>- Chứng chỉ thuộc chương trình CCDN</p>
+							<p>- GPA: 8.0</p>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
 	<section id="project">
 		<div class="container">
 			<h1 class="section-title"> Dự án </h1>
+			<div class="project-box">
+				<div class="project-item">
+					<img src="./images/project_1.png" alt="project1">
+					<div class="content-project">
+						<div class="name-project">
+							<p>CV CÁ NHÂN</p>
+						</div>
+						<div class="time">
+							<p class="time-items year">2021</p>
+							<p><i class="icon-user-1"></i><span>Funix</span></p>
+							<p><i class="icon-lamp"></i><span>Developer</span></p>
+						</div>
+						<div class="description">
+							<span>Mô tả</span>
+							<p>Trang Web CV cá nhân online. Gồm các thông tin cá nhân cũng như kỹ năng nghề nghiệp.</p>
+						</div>
+						<div class="action">
+							<span>Nhiệm vụ</span>
+							<p>- Phát triển code,Review code - Tối ưu code - Xử lý lỗi</p>
+						</div>
+						<div class="tech">
+							<span>Công nghệ</span>
+							<p>-HTML, CSS</p>
+						</div>
+					</div>
+				</div>
+				<div class="project-item">
+					<img src="./images/project_2.png" alt="project1">
+					<div class="content-project">
+						<div class="name-project">
+							<p>TRANG WEB QUẢN LÝ THÚ CƯNG</p>
+						</div>
+						<div class="time">
+							<p class="time-items year">2021</p>
+							<p><i class="icon-user-1"></i><span>Funix</span></p>
+							<p><i class="icon-lamp"></i><span>Developer</span></p>
+						</div>
+						<div class="description">
+							<span>Mô tả</span>
+							<p> Ứng dụng giúp quản lý các thông tin của thú cưng như: Cân nặng, giống, tình trạng tiêm
+								chủng, ... Bao gồm các chức năng thêm / sửa / xóa.</p>
+						</div>
+						<div class="action">
+							<span>Nhiệm vụ</span>
+							<p>- Phát triển code,Review code - Tối ưu code - Xử lý lỗi</p>
+						</div>
+						<div class="tech">
+							<span>Công nghệ</span>
+							<p>-HTML, CSS</p>
+						</div>
+					</div>
+				</div>
+				<div class="project-item">
+					<img src="./images/project_3.png" alt="project1">
+					<div class="content-project">
+						<div class="name-project">
+							<p>TRANG WEB XEM TIN TỨC</p>
+						</div>
+						<div class="time">
+							<p class="time-items year">2021</p>
+							<p><i class="icon-user-1"></i><span>Funix</span></p>
+							<p><i class="icon-lamp"></i><span>Developer</span></p>
+						</div>
+						<div class="description">
+							<span>Mô tả</span>
+							<p>Trang Web xem tin tức từ nhiều nguồn khác nhau, người dùng có thể tìm kiếm các tin tức
+								dựa theo các từkhóa. </p>
+						</div>
+						<div class="action">
+							<span>Nhiệm vụ</span>
+							<p>- Phát triển code,Review code - Tối ưu code - Xử lý lỗi</p>
+						</div>
+						<div class="tech">
+							<span>Công nghệ</span>
+							<p>-HTML, CSS</p>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
 	<section id="footer" class="bg-grey">
 		<div class="container">
 			<ul>
-				<li>Facebook</li>
-				<li>Linkedin</li>
-				<li>Github</li>
+				<li>
+					<a href="#">
+						<div><i class="icon-facebook"></i></div><span>Facebook</span>
+					</a>
+				</li>
+				<li><a href="#">
+						<div><i class="icon-linkedin"></i></div> <span>Linkedin</span>
+					</a>
+				</li>
+				<li><a href="#">
+						<div><i class="icon-github-circled"></i></div> <span>Github</span>
+					</a>
+				</li>
 			</ul>
 		</div>
 	</section>
