--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -27,9 +27,8 @@
 		<nav class="container">
 			<a href="#"><span>Thông tin</span><i class="icon-user"></i></a>
 			<a href="#"><span>Lý lịch</span> <i class="icon-doc-text-inv"></i></a>
-			<a href="#">
-				<h2>Nguyễn Văn A</h2>
-				<span>Full Stack Developer</span>
+			<a href="#" class="avatar">
+				<img src="./images/avatar-default.jpg" alt="">
 			</a>
 			<a href="#"><span>Chứng chỉ</span> <i class="icon-mail-alt"></i></a>
 			<a href="#"><span>Dự án</span><i class="icon-star-1"></i></a>
