chore: update Survey Form

--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -49,11 +49,11 @@
 				<h1 class="section-title">Thông tin cá nhân</h1>
 				<ul class="mt-40 info">
 					<li><span>Giới tính</span> : Nam</li>
-					<li><span>Ngày sinh</span> : 19/05/2000</li>
-					<li><span>Điện thoại</span> : (+84) 912398xxx</li>
-					<li><span>Email</span> : sinhvien@funix.edu.vn</li>
-					<li><span>Địa chỉ</span> : Số 10, đường 10, Hà Nội</li>
-					<li><span>Website</span> : https://abc.tech</li>
+					<li><span>Ngày sinh</span> : 06/11/1997</li>
+					<li><span>Điện thoại</span> : 0339172861</li>
+					<li><span>Email</span> : phamnhat05111997@gmail.com</li>
+					<li><span>Địa chỉ</span> : Giao Thủy, Nam Định</li>
+					<li><span>Website</span> : https://mywebsitetech.com</li>
 				</ul>
 				<div class="icons-personal-info">
 					<a href="#">
